added an logo with reponame for consitency, added todos for keeping track on changes this is mutable, added token for npm repo by this name, modified openapi.yaml (dev: fixing these to index.html new flags like --encrypt)
